Homepage contrast fixes

--- a/app/assets/stylesheets/sections/home.scss
+++ b/app/assets/stylesheets/sections/home.scss
@@ -41,7 +41,7 @@ a.button.big.learn-more {
     line-height: normal;
     display: inline-block;
     vertical-align: middle;
-    background: rgba(#100, 0.5);
+    background: rgba(#100, 0.6);
     margin: 0 auto;
     padding: 60px;
 
